# DynAMO

./: .gitignore  .gitmodules  MANIFEST.in  README.md  batch.sh  bounds.yaml  evaluate.py  evaluate_optimizer.py  main.py  pyproject.toml  setup.cfg  setup.sh  surrogate.py
process/: process_branin_dataset.py  process_molecule_dataset.py  process_storygen_dataset.py
src/dogambo/: __init__.py  metrics.py  utils.py
src/dogambo/core/: __init__.py  coms.py  dogambo_core.py  gambo.py  roma.py  romo.py
src/dogambo/data/: __init__.py  critic.py  db.py  stories.py
src/dogambo/embed/: __init__.py  dna.py  protein.py
src/dogambo/models/: __init__.py  difflm.py  dual.py  joint.py  llm.py  mlp.py  pe.py  vae.py
src/dogambo/optim/: __init__.py  base.py  cmaes.py  cosyne.py  grad.py  qei.py  state.py
src/dogambo/oracle/: __init__.py  branin.py  llm.py
src/dogambo/policy/: __init__.py  base.py
src/dynamo/: __init__.py  metrics.py  utils.py
src/dynamo/core/: __init__.py  base.py  coms.py  dynamo_core.py  gambo.py  roma.py
src/dynamo/data/: __init__.py  branin.py  multi.py  selfies.py
src/dynamo/embed/: molecule.py  protein.py
src/dynamo/models/: dual.py  mlp.py  vae.py
src/dynamo/optim/: __init__.py  base.py  cmaes.py  cosyne.py  qei.py  qucb.py
src/dynamo/oracle/: __init__.py  molecule.py  multi.py
